fixed overlapped input label and added message area

--- a/index.html
+++ b/index.html
@@ -69,17 +69,21 @@
             </header>
             <form>
                 <div class="name-form">
-                    <input type="text" name="name" required>
+                    <input type="text" name="name" placeholder=" " required>
                     <label for="name">Name</label>
                 </div>
                 <div class="email-form">
-                    <input type="email" required name="email">
+                    <input type="email" name="email" placeholder=" " required>
                     <label for="email">Email</label>
+                </div>
+                <div class="message-form">
+                    <textarea name="message" placeholder=" " required></textarea>
+                    <label for="message">Message</label>
                 </div>
                 <button type="submit">Submit</button>
             </form>
         </div>
-    </section>
+    </section>     
     <footer>
         <div class="footer-wrapper">
             <h5>Fhamyla &copy; 2024</h5>
