replaced about to skills

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 id="logo">fhamyla</h1>
             <ul>
                 <li class="home"><a href="#home">Home</a></li>
-                <li class="about"><a href="#about">About</a></li>
+                <li class="skills"><a href="#skills">Skills</a></li>
                 <li class="projects"><a href="#projects">Projects</a></li>
                 <li class="contact"><a href="#contact">Contact</a></li>
             </ul>
@@ -27,8 +27,8 @@
         <h2>Welcome to My Portfolio</h2>
         <h3>Explore my work and projects</h3>
     </section>
-    <section id="about">
-        <header class="about-head">
+    <section id="skills">
+        <header class="skills-head">
             <h2>About Me</h2>
             <p>I'm Fhamyla, a passionate web developer with a love for creating stunning websites and applications.</p>
         </header>
