--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Portfolio of Fhamyla.">
     <meta name="robots" content="index,follow">
     <link rel="icon" href="/icons/musical-symbol-of-letter-f.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/style.css">
     <title>fhamyla</title>
 </head>
@@ -28,10 +29,47 @@
     </section>
     <section id="skills">
         <header class="skills-head">
-            <h2>About Me</h2>
-            <p>I'm Fhamyla, a passionate web developer with a love for creating stunning websites and applications.</p>
+          <h2>Skills</h2>
         </header>
-    </section>
+        <div class="skills-list">
+          <div class="skillc">
+            <img src="img/c_lang-removebg-preview.png" alt="C language">
+            <span>C</span>
+          </div>
+          <div class="skill">
+            <i class="fab fa-java"></i>
+            <span>Java</span>
+          </div>
+          <div class="skillcplus">
+            <img src="img/c-.png" alt="C++">
+            <span>C++</span>
+          </div>
+          <div class="skill">
+            <i class="fa-brands fa-html5"></i>
+            <span>HTML</span>
+          </div>
+          <div class="skill">
+            <i class="fab fa-css3-alt"></i>
+            <span>CSS</span>
+          </div>
+          <div class="skill">
+            <i class="fab fa-python"></i>
+            <span>Python</span>
+          </div>
+          <div class="skillcsharp">
+            <img src="img/c-sharp.png" alt="C#">
+            <span>C#</span>
+          </div>
+          <div class="skill">
+            <i class="fab fa-github"></i>
+            <span>GitHub</span>
+          </div>
+          <div class="skillblender">
+            <img src="img/blender.png" alt="Blender">
+            <span>Blender</span>
+          </div>
+        </div>
+      </section>      
     <section id="projects">
         <header class="projects-head">
             <h2>Projects</h2>
