--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <span>C</span>
           </div>
           <div class="skill">
-            <i class="fab fa-java"></i>
-            <span>Java</span>
+            <i class="fa-brands fa-js"></i>
+            <span>Javascript</span>
           </div>
           <div class="skillcplus">
             <img src="img/c-.png" alt="C++">
@@ -53,8 +53,8 @@
             <span>CSS</span>
           </div>
           <div class="skill">
-            <i class="fab fa-python"></i>
-            <span>Python</span>
+            <i class="fa-brands fa-php"></i>
+            <span>PHP</span>
           </div>
           <div class="skillcsharp">
             <img src="img/c-sharp.png" alt="C#">
