icon name change

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="skill">
             <i class="fa-brands fa-js"></i>
-            <span>Javascript</span>
+            <span>JavaScript</span>
           </div>
           <div class="skillcplus">
             <img src="img/c-.png" alt="C++">
