--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <h1 id="logo">fhamyla</h1>
             <ul>
-                <li class="home"><a href="#home">Home</a></li>
+                <li class="home"><a href="#">Home</a></li>
                 <li class="skills"><a href="#skills">Skills</a></li>
                 <li class="projects"><a href="#projects">Projects</a></li>
                 <li class="contact"><a href="#contact">Contact</a></li>
@@ -69,36 +69,74 @@
             <span>Blender</span>
           </div>
         </div>
-      </section>      
-    <section id="projects">
-        <header class="projects-head">
-            <h2>Projects</h2>
-            <h3>Here are some of my latest works</h3>
-        </header>
-        <div class="cards">
-            <div class="card">
-                <div class="card-icon">
-                    <img src="icons/project1-icon.png" alt="Project 1 icon">
+        <section id="projects">
+            <header class="projects-head">
+              <h2>Projects</h2>
+              <h3>Here are some of my latest works</h3>
+            </header>
+            <div class="container">
+              <div class="card">
+                <div class="card-inner" style="--clr:#fff;">
+                  <div class="box">
+                    <div class="imgBox">
+                      <img src="img/TravelGo.png" alt="TravelGo">
+                    </div>
+                    <div class="icon">
+                      <a href="#" class="iconBox"><i class="fas fa-arrow-right"></i></a>
+                    </div>
+                  </div>
                 </div>
-                <h4>Project 1</h4>
-                <p>A web application for managing tasks efficiently.</p>
-            </div>
-            <div class="card">
-                <div class="card-icon">
-                    <img src="icons/project2-icon.png" alt="Project 2 icon">
+                <div class="content">
+                  <h3>TravelGo</h3>
+                  <p>A webpage made just for user interface purposes.</p>
+                  <ul>
+                    <li style="--clr-tag:#d3b19a;" class="branding">HTML</li>
+                    <li style="--clr-tag:#70b3b1;" class="development">CSS</li>
+                  </ul>
                 </div>
-                <h4>Project 2</h4>
-                <p>An e-commerce website with a modern design.</p>
-            </div>
-            <div class="card">
-                <div class="card-icon">
-                    <img src="icons/project3-icon.png" alt="Project 3 icon">
+              </div>
+              <div class="card">
+                <div class="card-inner" style="--clr:#fff;">
+                  <div class="box">
+                    <div class="imgBox">
+                      <img src="img/pexels-veeterzy-38136.jpg" alt="Dialysis Insight">
+                    </div>
+                    <div class="icon">
+                      <a href="#" class="iconBox"><i class="fas fa-arrow-right"></i></a>
+                    </div>
+                  </div>
                 </div>
-                <h4>Project 3</h4>
-                <p>A mobile app for tracking fitness activities.</p>
+                <div class="content">
+                  <h3>Dialysis Insight</h3>
+                  <p>Made to enhance the management of dialysis treatment.</p>
+                  <ul>
+                    <li style="--clr-tag:#d05fa2;" class="branding">WordPress</li>
+                    <li style="--clr-tag:#70b3b1;" class="design">PHP</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-inner" style="--clr:#fff;">
+                  <div class="box">
+                    <div class="imgBox">
+                      <img src="img/pexels-veeterzy-38136.jpg" alt="Project 3">
+                    </div>
+                    <div class="icon">
+                      <a href="#" class="iconBox"><i class="fas fa-arrow-right"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="content">
+                  <h3>Project 3</h3>
+                  <p>A mobile app for tracking fitness activities.</p>
+                  <ul>
+                    <li style="--clr-tag:#70b3b1;" class="app">app</li>
+                    <li style="--clr-tag:#d3b19a;" class="marketing">marketing</li>
+                  </ul>
+                </div>
+              </div>
             </div>
-        </div>
-    </section>
+          </section>
     <section id="contact">
         <div class="form-wrapper">
             <header class="form-head">
