--- a/index.html
+++ b/index.html
@@ -23,6 +23,52 @@
             </ul>
         </nav>
     </header>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() { 
+    const mainHead = document.querySelector('.main-head');
+    const skillsSection = document.querySelector('.skills');
+    const homeSection = document.querySelector('#home');
+    const links = document.querySelectorAll('ul li a');
+    const handleScroll = () => {
+        const scrollPosition = window.scrollY || window.pageYOffset;
+        const homeBottom = homeSection.offsetTop + homeSection.offsetHeight; // Bottom of Home section
+        const skillsTop = skillsSection.offsetTop; // Top of Skills section
+        if (scrollPosition < homeBottom) {
+            // Within the Home section
+            mainHead.classList.remove('transparent');
+            links.forEach(link => link.classList.remove('transparent'));
+        } else if (scrollPosition >= skillsTop - 100) {
+            // Scrolled past Skills section
+            mainHead.classList.add('transparent');
+            links.forEach(link => link.classList.add('transparent'));
+        } else {
+            // Default state (between Home and Skills)
+            mainHead.classList.remove('transparent');
+            links.forEach(link => link.classList.remove('transparent'));
+        }
+    };
+    // Handle click on navigation links
+    links.forEach(link => {
+        link.addEventListener('click', (event) => {
+            const targetId = link.getAttribute('href').substring(1); // Get the target section ID
+            const targetSection = document.getElementById(targetId);
+
+            if (targetSection) {
+                const targetTop = targetSection.offsetTop; // Get the target section's top position
+                window.scrollTo({
+                    top: targetTop,
+                    behavior: 'smooth' // Smooth scroll to the target section
+                });
+                event.preventDefault(); // Prevent default anchor click behavior
+            }
+        });
+    });
+
+    // Initial state check
+    handleScroll();
+    window.addEventListener('scroll', handleScroll);
+});
+  </script>    
     <section id="home" class="hero">
         <h2>Welcome to My Portfolio</h2>
         <h3>Explore my work and projects</h3>
